--- a/JEOBWebAPI/appsettings.json
+++ b/JEOBWebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=ControlEscolar;TrustServerCertificate=True;trusted_connection=true"
+  }
 }
