Finished project control escolar

--- a/JEOBWebAPI/appsettings.json
+++ b/JEOBWebAPI/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;database=ControlEscolar;TrustServerCertificate=True;trusted_connection=true"
-  }
+  },
+  "IgnoredCharacters": ["&","<",">","/"]
 }
